# LinkSnipper

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  a.txt  main.py  pyproject.toml  setup.py  setup.sh  shorted_urls.txt  shortened_urls.txt
.github/workflows/: mirror.yml  pylint.yml  python-publish.yml  ruff.yml
utils/: qr_code_generator.py  url_shortener.py
